--- a/frontend/src/styles/tour-details.css
+++ b/frontend/src/styles/tour-details.css
@@ -1,8 +1,13 @@
-.tour__content img{
+.tour__content .carousel-item{
+    width: 100%;
+    height: 40rem;
+    margin-bottom: 2.5rem;
+}
+
+.tour__content .carousel-item img {
+    height: 100%;
     width: 100%;
     border-radius: 0.5rem;
-    margin-bottom: 2.5rem;
-
 }
 
 .tour__info, 
