--- a/frontend/src/styles/tour-details.css
+++ b/frontend/src/styles/tour-details.css
@@ -19,6 +19,29 @@
     padding: 2rem;
 }
 
+.weather .weather-info {
+    border: 1px solid var(--secondary-color);
+}
+
+.weather .weather-info {
+    display: flex;
+    margin: 0 auto;
+    padding: 1rem;
+    width: 70%;
+    justify-content: space-between;
+}
+
+.weather .weather-info:nth-child(odd) {
+    background-color: var(--secondary-color);
+    color: white;
+    font-weight: bold;
+}
+
+/* .weather .weather-info .weather-key,
+.weather .weather-info .weather-value {
+    padding: 1rem;
+} */
+
 .tour__info h2{
     font-size: 1.5rem;
 }
