--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -47,7 +47,7 @@
 
 
  /* Responsiveness */
-@media only screen and (max-width : 992px) {
+@media only screen and (max-width : 1200px) {
    .logo img{
       width: 20%;
    }
@@ -65,6 +65,7 @@
       position: absolute;
       top: 0;
       right: 0;
+      padding: 2rem;
       width:  calc(100%,-75%);
       background: #fff;
       flex-direction: column;
