--- a/frontend/src/styles/tour-details.css
+++ b/frontend/src/styles/tour-details.css
@@ -155,3 +155,13 @@
 .review__item span{
     font-weight: 500;
 }
+
+@media only screen and (max-width : 992px) {
+    .carousel {
+        height: 30rem;
+        margin-bottom: 2rem;
+    }
+    .carousel-item img {
+        height: 30rem !important;
+    }
+}
